export interface NativeApp {
  _id: string;
  uri: string;
  name: string;
  icon: string;
}
