export interface WebApp {
  _id: string;
  url: string;
  name: string;
  timeLimit: string;
  icon: string;
}
